# ChewGumSite

./: .gitignore  Makefile  README.md
.claude/: migrate_posts.py
.github/workflows/: deploy-pages.yml
content/: banner.ans  index.frag.html  index.jsonld  index.toml
content/about/: index.frag.html  index.jsonld  index.toml
content/animation/: index.frag.html  index.jsonld  index.toml
content/blog/: index.frag.html  index.jsonld  index.toml
content/glossary/: index.frag.html  index.jsonld  index.toml
content/lab/: index.frag.html  index.jsonld  index.toml
content/links/: index.frag.html  index.jsonld  index.toml
content/music/: index.frag.html  index.jsonld  index.toml
docs/: ai_first_strategy.md  publishing_workflow.md  site_map.md
projects/dead-beat/: Cargo.toml  README.md
projects/dead-beat/scripts/: build-web.sh
projects/dead-beat/src/: app.rs  framebuffer.rs  game.rs  input.rs  lib.rs  main.rs  player.rs  renderer.rs  wasm_app.rs  world.rs
projects/dead-beat/web/: index.html  style.css
site/: README.md  feed.xml  index.html  llms.txt  robots.txt  sitemap.xml
site/about/: index.html
site/animation/: index.html
site/assets/: styles.css  window-frames.js
site/blog/: index.html
site/notes/: index.html
templates/: article_template.md  formatter_prompt.md  raw_thought_dump.md
tools/: ans_to_html.py  ansi_window.py  build.py
tools/authority/: README.md  audit_public_surface.py  audit_site_taxonomy.py  audit_window_taxonomy.py  emit_authority_draft.py  export_authority_trace.py  index_authority_memory.py  qwen_authority_bible.md  (+8 more)
(+226 files in other folders)
