[package]
name = "software_render"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
font8x8 = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minifb = "0.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
